[gd_scene format=3 uid="uid://b61bvmyuvxun1"]

[ext_resource type="Script" uid="uid://w3m1wudhqscy" path="res://Resources/Debuffs/debuff_class.gd" id="1_3knx0"]
[ext_resource type="Texture2D" uid="uid://buyxrjs2c70qr" path="res://Resources/Art/Debuffs/daunting_shout_debuff.png" id="2_0cc1c"]
[ext_resource type="PackedScene" uid="uid://tg83lmmkajyp" path="res://Scenes/UI/Tooltips/tooltip_layer.tscn" id="2_3knx0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0cc1c"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evl4q"]
size = Vector2(48, 48)

[node name="BaseDebuff" type="Node2D" unique_id=1243131108]
script = ExtResource("1_3knx0")

[node name="DebuffImage" type="Sprite2D" parent="." unique_id=1539333051]
unique_name_in_owner = true
texture = ExtResource("2_0cc1c")

[node name="DebuffUI" type="Control" parent="." unique_id=318393699]
layout_mode = 3
anchors_preset = 0
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0

[node name="DebuffCounters" type="Label" parent="DebuffUI" unique_id=1378379646]
unique_name_in_owner = true
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 34.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DebuffCounterPanel" type="Panel" parent="DebuffUI/DebuffCounters" unique_id=259685681]
unique_name_in_owner = true
show_behind_parent = true
custom_minimum_size = Vector2(0, 11)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0cc1c")

[node name="TooltipLayer" parent="." unique_id=1878210227 instance=ExtResource("2_3knx0")]
unique_name_in_owner = true

[node name="Area2D" type="Area2D" parent="." unique_id=1854054960]
collision_layer = 16777216
collision_mask = 16777216

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1098320630]
shape = SubResource("RectangleShape2D_evl4q")
